unpackaged/main/default/objects/FF_Employment__c/fields/Deleted_By__c.field-meta.xml
<CustomField>
    <fullName>Deleted_By__c</fullName>
    <description>If populated, the related record will not be visible in the profile to the customer. This is a control implemented on the profile logic. This field captures the reason why it is hidden.</description>
    <label>Hidden from profile reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FF_Deleted_By</valueSetName>
    </valueSet>
</CustomField>