unpackaged/main/default/objects/FF_Employment__c/fields/Employment_status__c.field-meta.xml
<CustomField>
    <fullName>Employment_status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Director (Limited Company)</fullName>
            </value>
            <value>
                <fullName>Partner (Partnership)</fullName>
            </value>
            <value>
                <fullName>Sole trader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>