unpackaged/main/default/objects/FF_Employment__c/fields/FF_Session__c.field-meta.xml
<CustomField>
    <fullName>FF_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FF Session</label>
    <referenceTo>FF_Session__c</referenceTo>
    <relationshipLabel>FF Employment</relationshipLabel>
    <relationshipName>FF_Employment</relationshipName>
    <type>Lookup</type>
</CustomField>