unpackaged/main/default/objects/FF_Employment__c/fields/ff_session_external_id__c.field-meta.xml
<CustomField>
    <fullName>ff_session_external_id__c</fullName>
    <description>This is the external id of the related FF Session record created by the client (External User Update)</description>
    <externalId>true</externalId>
    <label>ff session external id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>