unpackaged/main/default/objects/FF_Employment__c/fields/OW_income_from_state_pension__c.field-meta.xml
<CustomField>
    <fullName>OW_income_from_state_pension__c</fullName>
    <description>For those receiving retirement income, we need to know the amount they are receiving from state pension. Maps to the field of the same name on the FinServ__Emplyment__c object.</description>
    <label>Income from state pension</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>