unpackaged/main/default/objects/FF_Employment__c/fields/OW_income_from_state_pension_frequency__c.field-meta.xml
<CustomField>
    <fullName>OW_income_from_state_pension_frequency__c</fullName>
    <description>To provide flexibility in how it is provided, we allow the income from state pension to be provided with a different frequency. Maps to the field of the same name on the FinServ__Employment__c object.</description>
    <label>Income from state pension frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>