unpackaged/main/default/objects/FF_Employment__c/fields/Validated__c.field-meta.xml
<CustomField>
    <fullName>Validated__c</fullName>
    <description>Marking this as validated will either create a new record in Salesforce, if one does not exist already, or it will copy the updates to the existing record.</description>
    <label>Validation status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Overwritten</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>