unpackaged/main/default/objects/FF_Employment__c/recordTypes/Employment.recordType-meta.xml
<RecordType>
    <fullName>Employment</fullName>
    <active>true</active>
    <label>Employment</label>
</RecordType>