unpackaged/main/default/objects/FF_Employment__c/recordTypes/Not_currently_working.recordType-meta.xml
<RecordType>
    <fullName>Not_currently_working</fullName>
    <active>true</active>
    <label>Not currently working</label>
</RecordType>