unpackaged/main/default/objects/FF_Employment__c/recordTypes/Retirement_income.recordType-meta.xml
<RecordType>
    <fullName>Retirement_income</fullName>
    <active>true</active>
    <label>Retirement Income</label>
</RecordType>