unpackaged/main/default/objects/FF_Employment__c/validationRules/Rejection.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(Validated__c , &quot;Rejected&quot;),
 ISBLANK(Reason_for_Rejection__c)
)</errorConditionFormula>
    <errorDisplayField>Reason_for_Rejection__c</errorDisplayField>
    <errorMessage>You need to add a reason for rejection</errorMessage>
</ValidationRule>