unpackaged/main/default/objects/FF_Employment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Person_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Household__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>